; ModuleID = '/home/carl/AnghaBench/linux/kernel/dma/extr_debug.c_debug_dma_map_resource.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/dma/extr_debug.c_debug_dma_map_resource.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.dma_debug_entry = type { i64, i32, i32, i32, i32, i32, %struct.device*, i32 }

@dma_debug_resource = common dso_local global i32 0, align 4
@MAP_ERR_NOT_CHECKED = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @debug_dma_map_resource(%struct.device* %0, i32 %1, i64 %2, i32 %3, i32 %4) #0 {
  %6 = alloca %struct.device*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca %struct.dma_debug_entry*, align 8
  store %struct.device* %0, %struct.device** %6, align 8
  store i32 %1, i32* %7, align 4
  store i64 %2, i64* %8, align 8
  store i32 %3, i32* %9, align 4
  store i32 %4, i32* %10, align 4
  %12 = call i32 (...) @dma_debug_disabled()
  %13 = call i64 @unlikely(i32 %12)
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %16

15:                                               ; preds = %5
  br label %50

16:                                               ; preds = %5
  %17 = call %struct.dma_debug_entry* (...) @dma_entry_alloc()
  store %struct.dma_debug_entry* %17, %struct.dma_debug_entry** %11, align 8
  %18 = load %struct.dma_debug_entry*, %struct.dma_debug_entry** %11, align 8
  %19 = icmp ne %struct.dma_debug_entry* %18, null
  br i1 %19, label %21, label %20

20:                                               ; preds = %16
  br label %50

21:                                               ; preds = %16
  %22 = load i32, i32* @dma_debug_resource, align 4
  %23 = load %struct.dma_debug_entry*, %struct.dma_debug_entry** %11, align 8
  %24 = getelementptr inbounds %struct.dma_debug_entry, %struct.dma_debug_entry* %23, i32 0, i32 7
  store i32 %22, i32* %24, align 8
  %25 = load %struct.device*, %struct.device** %6, align 8
  %26 = load %struct.dma_debug_entry*, %struct.dma_debug_entry** %11, align 8
  %27 = getelementptr inbounds %struct.dma_debug_entry, %struct.dma_debug_entry* %26, i32 0, i32 6
  store %struct.device* %25, %struct.device** %27, align 8
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @PHYS_PFN(i32 %28)
  %30 = load %struct.dma_debug_entry*, %struct.dma_debug_entry** %11, align 8
  %31 = getelementptr inbounds %struct.dma_debug_entry, %struct.dma_debug_entry* %30, i32 0, i32 5
  store i32 %29, i32* %31, align 8
  %32 = load i32, i32* %7, align 4
  %33 = call i32 @offset_in_page(i32 %32)
  %34 = load %struct.dma_debug_entry*, %struct.dma_debug_entry** %11, align 8
  %35 = getelementptr inbounds %struct.dma_debug_entry, %struct.dma_debug_entry* %34, i32 0, i32 4
  store i32 %33, i32* %35, align 4
  %36 = load i64, i64* %8, align 8
  %37 = load %struct.dma_debug_entry*, %struct.dma_debug_entry** %11, align 8
  %38 = getelementptr inbounds %struct.dma_debug_entry, %struct.dma_debug_entry* %37, i32 0, i32 0
  store i64 %36, i64* %38, align 8
  %39 = load i32, i32* %10, align 4
  %40 = load %struct.dma_debug_entry*, %struct.dma_debug_entry** %11, align 8
  %41 = getelementptr inbounds %struct.dma_debug_entry, %struct.dma_debug_entry* %40, i32 0, i32 3
  store i32 %39, i32* %41, align 8
  %42 = load i32, i32* %9, align 4
  %43 = load %struct.dma_debug_entry*, %struct.dma_debug_entry** %11, align 8
  %44 = getelementptr inbounds %struct.dma_debug_entry, %struct.dma_debug_entry* %43, i32 0, i32 1
  store i32 %42, i32* %44, align 8
  %45 = load i32, i32* @MAP_ERR_NOT_CHECKED, align 4
  %46 = load %struct.dma_debug_entry*, %struct.dma_debug_entry** %11, align 8
  %47 = getelementptr inbounds %struct.dma_debug_entry, %struct.dma_debug_entry* %46, i32 0, i32 2
  store i32 %45, i32* %47, align 4
  %48 = load %struct.dma_debug_entry*, %struct.dma_debug_entry** %11, align 8
  %49 = call i32 @add_dma_entry(%struct.dma_debug_entry* %48)
  br label %50

50:                                               ; preds = %21, %20, %15
  ret void
}

declare dso_local i64 @unlikely(i32) #1

declare dso_local i32 @dma_debug_disabled(...) #1

declare dso_local %struct.dma_debug_entry* @dma_entry_alloc(...) #1

declare dso_local i32 @PHYS_PFN(i32) #1

declare dso_local i32 @offset_in_page(i32) #1

declare dso_local i32 @add_dma_entry(%struct.dma_debug_entry*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
